js구조 오류 수정, 페이지 연결 및 각 페이지 설명 추가

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,11 @@
       <div class="header">
         <h2>게임장</h2>
       </div>
-      <div id="root">
+
+      <div id="root"></div>
+
+      <div class="footer">
+        Copyright © 2021 Pyun-se Inc.
       </div>
     </div>
 
