--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div class="main">
       <div class="header">
-        <h2>게임장</h2>
+        <h2><a href="/">게임장</a></h2>
       </div>
 
       <div id="root"></div>
