시작 페이지 start와 동일하게 변경

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,12 @@
         <h2><a href="/">게임장</a></h2>
       </div>
 
-      <div id="root"></div>
+      <div id="root">
+        <div className="start"> 
+          <h4>리액트 활용 프로젝트</h4>
+          리액트를 연습하기 위해 간단히 구현해 본 사이트입니다!
+        </div>
+      </div>
 
       <div class="footer">
         Copyright © 2021 Pyun-se Inc.
