--- a/public/index.html
+++ b/public/index.html
@@ -27,9 +27,9 @@
     <title>게임장</title>
   </head>
 
-  <body>
+  <body class="container-fluid">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="main">
+    <div class="main row-fluid">
       <div class="header">
         <h2><a href="/Ewhaian-Study/">게임장</a></h2>
       </div>
